--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div class="content">
 			<div class="left">
-				<h1>Learn form the <span>Coolest</span> Coding platform of india</h1>
+				<h1>Learn from the <span>Coolest</span> Coding platform of india</h1>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, est perferendis fugiat repellat asperiores provident perspiciatis reiciendis modi iusto non quibusdam officiis aut debitis nesciunt, eius rem aliquam, vel doloremque.</p>
 				<button>Explore Now</button>
 			</div>
